@@ -24,8 +24,8 @@
 
 defined('MOODLE_INTERNAL') || die();
 
-$plugin->version   = 2015100601;        // The current plugin version (Date: YYYYMMDDXX).
+$plugin->version   = 2015100802;        // The current plugin version (Date: YYYYMMDDXX).
 $plugin->requires  = 2014051200;        // Requires Moodle 2.7 or higher, when Atto was added to core.
 $plugin->component = 'atto_wordimport';  // Full name of the plugin (used for diagnostics).
 $plugin->maturity  = MATURITY_BETA;
-$plugin->release   = '0.9.3 (Build 2015100601)'; // Human readable version information.
+$plugin->release   = '0.9.4 (Build 2015100802)'; // Human readable version information.
