@@ -1,1 +1,1 @@
-YUI.add("moodle-atto_wordimport-button",function(e,t){var n="atto_wordimport",r='<img src="{{url}}" alt="{{alt}}" {{#if width}}width="{{width}}" {{/if}}{{#if height}}height="{{height}}" {{/if}}{{#if presentation}}role="presentation" {{/if}}style="{{alignment}}{{margin}}{{customstyle}}"{{#if classlist}}class="{{classlist}}" {{/if}}{{#if id}}id="{{id}}" {{/if}}/>';e.namespace("M.atto_wordimport").Button=e.Base.create("button",e.M.editor_atto.EditorPlugin,[],{_currentSelection:null,initializer:function(){if(this.get("disabled"))return;this.addButton({icon:"wordimport",iconComponent:n,callback:function(){this.get("host").showFilepicker("link",this._handleWordFileUpload,this)},title:"importfile",callbackArgs:"wordimport"}),this.editor.on("drop",this._handleWordFileDragDrop,this)},_handleWordFileUpload:function(t){var n=this.get("host"),r=n.get("filepickeroptions"),i=r.link,s=this,o=new XMLHttpRequest;if(t.url==="")return!1;if(/\.doc[xm]$/.test(t.file)===!1)return!1;o.onreadystatechange=function(){var t;if(o.readyState===4)if(o.status===200){t=JSON.parse(o.responseText);if(t){if(t.error)return new M.core.ajaxException(t);n.insertContentAtFocusPoint(t.html),s.markUpdated()}}else e.use("moodle-core-notification-alert",function(){new M.core.alert({message:M.util.get_string("servererror","moodle")})})};var u="filename="+t.file,a="ctx_id="+t.url.replace(/.*\/draftfile.php\/([0-9]*)\/.*/i,"$1"),f="itemid="+i.itemid,l="sesskey="+M.cfg.sesskey,c="/lib/editor/atto/plugins/wordimport/import.php?";return o.open("GET",M.cfg.wwwroot+c+a+"&"+f+"&"+u+"&"+l,!0),o.send(),!0},_handleWordFileDragDrop:function(t){var i=this,s=this.get("host"),o=e.Handlebars.compile(r),u="application/vnd.openxmlformats-officedocument.wordprocessingml.document";s.saveSelection(),t=t._event;var a=t.dataTransfer&&t.dataTransfer.files&&t.dataTransfer.files.length;if(a&&u===t.dataTransfer.files[0].type){var f=s.get("filepickeroptions").link,l=f.savepath===undefined?"/":f.savepath,c=new FormData,h=0,p="",d=new XMLHttpRequest,v="",m=Object.keys(f.repositories);t.preventDefault(),t.stopPropagation(),c.append("repo_upload_file",t.dataTransfer.files[0]),c.append("itemid",f.itemid);for(var g=0;g<m.length;g++)if(f.repositories[m[g]].type==="upload"){c.append("repo_id",f.repositories[m[g]].id);break}c.append("env",f.env),c.append("sesskey",M.cfg.sesskey),c.append("client_id",f.client_id),c.append("savepath",l),c.append("ctx_id",f.context.id),h=(new Date).getTime(),p="moodleimage_"+Math.round(Math.random()*1e5)+"-"+h,s.focus(),s.restoreSelection(),v=o({url:M.util.image_url("i/loading_small","moodle"),alt:M.util.get_string("uploading",n),id:p}),s.insertContentAtFocusPoint(v),i.markUpdated(),d.onreadystatechange=function(){var t=i.editor.one("#"+p),n,r,s;if(d.readyState===4)if(d.status===200){n=JSON.parse(d.responseText);if(n){if(n.error)return t&&t.remove(!0),new M.core.ajaxException(n);s=n.file,n.event&&n.event==="fileexists"&&(s=n.newfile),d.onreadystatechange=function(){var t=i.editor.one("#"+p),r;if(d.readyState===4)if(d.status===200){n=JSON.parse(d.responseText);if(n){if(n.error)return new M.core.ajaxException(n);r=e.Node.create(n.html),t?t.replace(r):i.editor.appendChild(r)}}else e.use("moodle-core-notification-alert",function(){new M.core.alert({message:M.util.get_string("servererror","moodle")})})},r=n.url.replace(/.*\/draftfile.php\/([0-9]*)\/.*/i,"$1");var o="ctx_id="+r,u="itemid="+f.itemid,a="filename="+s,l="sesskey="+M.cfg.sesskey,c="/lib/editor/atto/plugins/wordimport/import.php?";d.open("GET",M.cfg.wwwroot+c+o+"&"+u+"&"+a+"&"+l,!0),d.send(),i.markUpdated()}}else e.use("moodle-core-notification-alert",function(){new M.core.alert({message:M.util.get_string("servererror","moodle")})}),t&&t.remove(!0)},d.open("POST",M.cfg.wwwroot+"/repository/repository_ajax.php?action=upload",!0),d.send(c)}return!1}})},"@VERSION@",{requires:["moodle-editor_atto-plugin"]});
+YUI.add("moodle-atto_wordimport-button",function(e,t){var n="atto_wordimport",r='<img src="{{url}}" alt="{{alt}}" {{#if width}}width="{{width}}" {{/if}}{{#if height}}height="{{height}}" {{/if}}{{#if presentation}}role="presentation" {{/if}}style="{{alignment}}{{margin}}{{customstyle}}"{{#if classlist}}class="{{classlist}}" {{/if}}{{#if id}}id="{{id}}" {{/if}}/>';e.namespace("M.atto_wordimport").Button=e.Base.create("button",e.M.editor_atto.EditorPlugin,[],{_currentSelection:null,initializer:function(){if(this.get("disabled"))return;this.addButton({icon:"wordimport",iconComponent:n,callback:function(){this.get("host").showFilepicker("link",this._handleWordFileUpload,this)},title:"importfile",callbackArgs:"wordimport"}),this.editor.on("drop",this._handleWordFileDragDrop,this)},_handleWordFileUpload:function(t){var n=this.get("host"),r=n.get("filepickeroptions"),i=r.link,s=this,o=new XMLHttpRequest;if(t.url==="")return!1;if(/\.doc[xm]$/.test(t.file)===!1)return!1;o.onreadystatechange=function(){var t;if(o.readyState===4)if(o.status===200){t=JSON.parse(o.responseText);if(t){if(t.error)return new M.core.ajaxException(t);n.insertContentAtFocusPoint(t.html),s.markUpdated()}}else e.use("moodle-core-notification-alert",function(){new M.core.alert({message:M.util.get_string("servererror","moodle")})})};var u="filename="+t.file,a="ctx_id="+i.context.id,f="itemid="+i.itemid,l="sesskey="+M.cfg.sesskey,c="/lib/editor/atto/plugins/wordimport/import.php?";return o.open("GET",M.cfg.wwwroot+c+a+"&"+f+"&"+u+"&"+l,!0),o.send(),!0},_handleWordFileDragDrop:function(t){var i=this,s=this.get("host"),o=e.Handlebars.compile(r),u="application/vnd.openxmlformats-officedocument.wordprocessingml.document";s.saveSelection(),t=t._event;var a=t.dataTransfer&&t.dataTransfer.files&&t.dataTransfer.files.length;if(a&&u===t.dataTransfer.files[0].type){var f=s.get("filepickeroptions").link,l=f.savepath===undefined?"/":f.savepath,c=new FormData,h=0,p="",d=new XMLHttpRequest,v="",m=Object.keys(f.repositories);t.preventDefault(),t.stopPropagation(),c.append("repo_upload_file",t.dataTransfer.files[0]),c.append("itemid",f.itemid);for(var g=0;g<m.length;g++)if(f.repositories[m[g]].type==="upload"){c.append("repo_id",f.repositories[m[g]].id);break}c.append("env",f.env),c.append("sesskey",M.cfg.sesskey),c.append("client_id",f.client_id),c.append("savepath",l),c.append("ctx_id",f.context.id),h=(new Date).getTime(),p="moodleimage_"+Math.round(Math.random()*1e5)+"-"+h,s.focus(),s.restoreSelection(),v=o({url:M.util.image_url("i/loading_small","moodle"),alt:M.util.get_string("uploading",n),id:p}),s.insertContentAtFocusPoint(v),i.markUpdated(),d.onreadystatechange=function(){var t=i.editor.one("#"+p),n,r;if(d.readyState===4)if(d.status===200){n=JSON.parse(d.responseText);if(n){if(n.error)return t&&t.remove(!0),new M.core.ajaxException(n);r=n.file,n.event&&n.event==="fileexists"&&(r=n.newfile),d.onreadystatechange=function(){var t=i.editor.one("#"+p),r;if(d.readyState===4)if(d.status===200){n=JSON.parse(d.responseText);if(n){if(n.error)return new M.core.ajaxException(n);r=e.Node.create(n.html),t?t.replace(r):i.editor.appendChild(r)}}else e.use("moodle-core-notification-alert",function(){new M.core.alert({message:M.util.get_string("servererror","moodle")})})};var s="ctx_id="+f.context.id,o="itemid="+f.itemid,u="filename="+r,a="sesskey="+M.cfg.sesskey,l="/lib/editor/atto/plugins/wordimport/import.php?";d.open("GET",M.cfg.wwwroot+l+s+"&"+o+"&"+u+"&"+a,!0),d.send(),i.markUpdated()}}else e.use("moodle-core-notification-alert",function(){new M.core.alert({message:M.util.get_string("servererror","moodle")})}),t&&t.remove(!0)},d.open("POST",M.cfg.wwwroot+"/repository/repository_ajax.php?action=upload",!0),d.send(c)}return!1}})},"@VERSION@",{requires:["moodle-editor_atto-plugin"]});
