@@ -2,6 +2,7 @@ Release notes
 -------------
 
 Date          Version   Comment
+2015/10/08    0.9.4     Correct context ID handling to work on all platforms
 2015/09/28    0.9.3     Implement drag and drop support
 2015/09/25    0.9.2     Insert content whereever the cursor is, not at the end of the text area
 2015/09/24    0.9.1     Automate installation process so that icon is added to files group in editor
